# shader-sandbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  RUN INSTRUCTIONS.txt  THIRD_PARTY_NOTICES.md  clang-toolchain.cmake  compile_commands.json  imgui.ini
include/: types.hpp
include/glad/: glad.h
include/nfd/: nfd.h  nfd.hpp
lib/assimp/test/models/PLY/: cube_out.ply
lib/assimp/test/models/glTF2/BoxBadNormals-glTF-Binary/: BoxBadNormals_out.glb
lib/assimp/test/models/glTF2/BoxTexcoords-glTF/: boxTexcoords.gltf_out.glb
lib/assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf  BoxTextured_out.mtl
lib/assimp/test/models/glTF2/BoxTextured-glTF-Embedded/: BoxTextured_out.mtl
lib/assimp/test/models/glTF2/BoxTextured-glTF-pbrSpecularGlossiness/: BoxTextured_out.glb
lib/assimp/test/models/glTF2/BoxWithInfinites-glTF-Binary/: BoxWithInfinites_out.glb  BoxWithInfinites_out.gltf
lib/assimp/test/models/glTF2/ClearCoat-glTF/: ClearCoatTest_out.glb
lib/assimp/test/models/glTF2/glTF-Sample-Models/AnimatedMorphCube-glTF/: AnimatedMorphCube_out.glTF
lib/assimp/test/models/glTF2/simple_skin/: quad_all_out.glb  quad_all_out.gltf  quad_four_out.glb  quad_four_out.gltf
lib/glad/: glad.c
lib/nfd/: nfd_gtk.cpp  nfd_win.cpp
linuxbuild/: run.sh
linuxtools/: new-compile.sh
shaders/: 3d.vert  color.frag  color.vert  default.frag  default.vert  gridplane.frag  gridplane.vert  instance.vert  tex.frag  tex.vert  texture.frag
shaders/demo/: lucasSample.vert  normalColor.frag  uniformColor.frag
shaders/scene/: gridplane.frag  gridplane.vert  skybox.frag  skybox.vert
src/: app.rc  main.cpp
src/application/: AppContext.hpp  AppSettings.hpp  Application.cpp  Application.hpp  Project.cpp  Project.hpp  SettingsStyles.hpp
src/core/: ConsoleEngine.cpp  ConsoleEngine.hpp  ConsoleRegister.cpp  ConsoleRegister.hpp  ConsoleTypes.hpp  EditorEngine.cpp  EditorEngine.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventTypes.hpp  FileRegistry.cpp  FileRegistry.hpp  HotReloader.cpp  HotReloader.hpp  InspectorEngine.cpp  InspectorEngine.cpp.orig  InspectorEngine.hpp  InspectorEngine.hpp.orig  MenuEngine.cpp  MenuEngine.hpp  ShaderHandler.cpp  ShaderHandler.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  TextureRegistry.cpp  TextureRegistry.hpp  UniformParser.cpp  UniformParser.hpp  UniformRegistry.cpp  UniformRegistry.hpp  UniformTypes.hpp
src/core/input/: ActionRegistry.cpp  ActionRegistry.hpp  ContextManager.cpp  ContextManager.hpp  InputState.cpp  InputState.hpp  Keybinds.cpp  Keybinds.hpp
src/core/logging/: ConsoleSink.cpp  ConsoleSink.hpp  FileSink.cpp  FileSink.hpp  LogClassifier.cpp  LogClassifier.hpp  LogSetup.cpp  LogSetup.hpp  LogSink.hpp  LogTypes.hpp  Logger.cpp  Logger.hpp  StdoutSink.cpp  StdoutSink.hpp
src/core/ui/: AssetsInspectorFileSystem.cpp  AssetsInspectorUI.cpp  AssetsInspectorUI.hpp  AssetsManager.hpp  ConsoleUI.cpp  ConsoleUI.hpp  EditorUI.cpp  EditorUI.hpp  FileInspectorUI.cpp  FileInspectorUI.hpp  Fonts.cpp  Fonts.hpp  InspectorUI.cpp  InspectorUI.cpp.orig  InspectorUI.hpp  InspectorUI.hpp.orig  MaterialsInspectorUI.cpp  MaterialsInspectorUI.hpp  MenuUI.cpp  MenuUI.hpp  ObjectsInspectorUI.cpp  ObjectsInspectorUI.hpp  TextEditor.cpp  TextEditor.h  UniformInspectorUI.cpp  UniformInspectorUI.hpp  ViewportUI.cpp  ViewportUI.hpp
src/core/ui/components/: SearchText.cpp  SearchText.hpp  TextSelector.cpp  TextSelector.hpp
src/core/ui/modals/: AddObjectModal.cpp  AddObjectModal.hpp  AddTextureModal.cpp  AddTextureModal.hpp  DeleteProjectModal.cpp  DeleteProjectModal.hpp  IModal.hpp  ModalManager.cpp  ModalManager.hpp  OpenProjectModal.cpp  OpenProjectModal.hpp  SaveAsModal.cpp  SaveAsModal.hpp  SettingsModal.cpp  SettingsModal.hpp
src/core/ui/themes/: default.hpp
src/engine/: AppTimer.cpp  AppTimer.hpp  Camera.cpp  Camera.hpp  DrawMetrics.hpp  Errorlog.cpp  Errorlog.hpp  GetFileContents.hpp  InputHandler.cpp  InputHandler.hpp  Inspector.hpp  Logger.cpp  Logger.hpp  MicahOldRenderer.hpp  Object.hpp  SearchText.cpp  SearchText.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Voxel.hpp  Window.cpp  Window.hpp
src/object/: AssimpImporter.cpp  AssimpImporter.hpp  CubeMap.cpp  CubeMap.hpp  CustomModel.cpp  CustomModel.hpp  ImportedModel.cpp  ImportedModel.hpp  InstanceData.hpp  Material.cpp  Material.hpp  MaterialCache.cpp  MaterialCache.hpp  MaterialCategory.hpp  MaterialProperties.hpp  MaterialType.hpp  Mesh.cpp  Mesh.hpp  MeshAssimp.cpp  MeshAssimp.hpp  MeshProperties.hpp  Model.cpp  Model.hpp  ModelCache.cpp  ModelCache.hpp  ModelImporter.cpp  ModelImporter.hpp  ModelPrimitive.hpp  ModelStatus.hpp  ModelType.hpp  ModelTypes.hpp  ObjCache.cpp  ObjCache.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  (+3 more)
src/persistence/: AppSettings.cpp  AppSettings.hpp  Paths.cpp  Paths.hpp  ProjectLoader.cpp  ProjectLoader.hpp  ProjectSwitch.h  SettingsLoader.cpp  SettingsLoader.hpp  UniformPersistence.cpp  UniformPersistence.hpp
src/platform/: GL.hpp  Platform.cpp  Platform.hpp
src/platform/components/: Keys.cpp  Keys.hpp  Window.cpp  Window.hpp
src/presets/: PresetAssets.cpp  PresetAssets.hpp
src/texture/: CubeMap.cpp  CubeMap.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  TextureCache.cpp  TextureCache.hpp  TextureStatus.hpp  TextureType.hpp
src/ui/: Editor.cpp  Editor.hpp  Inspector.hpp  UIContext.cpp  UIContext.hpp
tests/: test_main.cpp
tests/core/: test_console_engine.cpp  test_editor_engine.cpp  test_event_dispatcher.cpp  test_shader_registry.cpp  test_uniform_registry.cpp  test_uniform_types.cpp
tests/core/input/: test_action_registry.cpp  test_context_manager.cpp  test_input_state.cpp  test_keybinds.cpp
tests/core/logging/: test_file_sink.cpp  test_log_classifier.cpp  test_logger.cpp
tests/core/ui/: test_editor_ui.cpp
tests/core/ui/components/: test_text_selector.cpp
tests/engine/: test_timer.cpp
tests/platform/: test_platform.cpp
